fix alignment for page-footer, socials

--- a/markup/components/page-footer/page-footer.scss
+++ b/markup/components/page-footer/page-footer.scss
@@ -4,6 +4,10 @@
 
     background-color: #ffffff;
 
+    & > * {
+        display: flex;
+    }
+
     &__hashtag {
         padding-bottom: 3.5rem;
 
