--- a/markup/components/socials/socials.scss
+++ b/markup/components/socials/socials.scss
@@ -11,4 +11,8 @@
         height: 46px;
         background-color: $color-secondary;
     }
+
+    &__link {
+        display: flex;
+    }
 }
